# aria

./: .gitignore  CMakeLists.txt
include/aria/: frame.hpp  io_thread.hpp  player.hpp  speaker.hpp
src/: io_thread.cpp  player.cpp  source_main.cpp  speaker.cpp  speaker_connection.cpp  speaker_connection.hpp  speaker_main.cpp
src/base/: event.hpp  event_queue.cpp  event_queue.hpp  frame.cpp  frame_buffer.cpp  frame_buffer.hpp  message.cpp  message.h  message.hpp  types.hpp
src/speaker/: speaker_engine.cpp  speaker_engine.hpp
src/util/: binary_buffer.cpp  binary_buffer.hpp  callable_queue.hpp  unique_ptr_tools.hpp
tests/unit/base/: message_test.cpp
tests/unit/speaker/: speaker_engine_test.cpp
tests/unit/util/: binary_buffer_test.cpp
